--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -4,6 +4,7 @@
     <string name="enter_message">Enter text here</string>
     <string name="translate_button">Translate!</string>
     <string name="title_activity_learn">LearnActivity</string>
+    <string name="save_button">Save!</string>
     <string name="action_settings">Settings</string>
     <string name="section_format">Hello World from section: %1$d</string>
 </resources>
